--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="yaguang li personal website astronomy">
+    <meta name="keywords" content="astronomy, asteroseismology, stars, yaguang li">
+    <meta name="author" content="yaguang li">
+    <title>yaguang li</title>
+
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+    <!-- stylesheet -->
+    <link href="styles/styles.css" rel="stylesheet">
+    <!-- font awesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+            integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="scripts/scripts.js" defer></script>
+</head>
+
+<body>
+    <header>
+        <nav class="nav full-nav">
+            <div>
+                <img src="images/" alt="" style="width: 25%;">
+            </div>
+            <div>
+                <a href="index.html">Home</a>
+                <a href="research.html">Research</a>
+                <a href="code.html">Code</a>
+                <a href="resources.html">Resources</a>
+                <a href="talks.html">Talks</a>
+            </div>
+        </nav>
+    </header>    
+</body>
+
+</html>
